# iamlazy

./: README.md  pyproject.toml  slides.md
examples/: httpx_get.py  singlefile.py
scripts/: crownnorthampton_detail.py  json_mode_example.py  markdownify_example.py  openai_function_calling_example.py  openai_tool_calling.py  parse_binance_spot.py  simplemind_tool_calling.py
scripts/mirascope/: crownnorthampton.py  crownnorthampton_detail.py  tabelog.py
scripts/simplemind/: espn_soccer.py  youtube_rank_exercises.py  youtube_recipe.py
src/iamlazy/loaders/: httpx.py  pipeline.py  utils.py
