[project]
name = "iamlazy"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [{ name = "narumi", email = "toucans-cutouts0f@icloud.com" }]
requires-python = ">=3.12"
dependencies = [
    "cloudscraper>=1.2.71",
    "feedparser>=6.0.11",
    "httpx>=0.28.1",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "markdownify>=0.14.1",
    "mirascope>=1.15.1",
    "openai>=1.59.6",
    "playwright>=1.49.1",
    "pydantic>=2.10.5",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "simplemind",
    "youtube-transcript-api>=0.6.3",
]

[project.scripts]
iamlazy = "iamlazy.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["mypy>=1.13.0", "pytest>=8.3.3", "pytest-cov>=6.0.0", "ruff>=0.7.3"]

[tool.ruff]
exclude = ["build"]
line-length = 120

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true

[tool.uv.sources]
simplemind = { git = "https://github.com/kennethreitz/simplemind.git" }
